# geavanceerde_computer_architectuur

./: .gitignore  README.md  test  test.cu
lab1/: main  main.cu
lab2/: main1  main1.cu  main2  main2.cu  main3  main3.cu
lab3/: main1  main1.cu  main2  main2-2  main2-2.cu  main2.cu  output_image.ppm  output_image1.ppm  output_image2.ppm
lab4/: main  main.cu  main2  main2.cu  output_image.ppm  output_image_coalesced.ppm
lab4/wannes/1/: main1  main1.cu  plots1.py
lab4/wannes/2/: docs  docs.cu  main2  main2.cu  output2.txt  plots2.py
lab4/wannes/report/: template.tex  titlepage.tex
lab5/: async  async.cu  syncronized  syncronized.cu
project/: info.md  todo.md
project/cudaproject/: CMakeLists.txt  differentFilters.md  pdalInfo.md  setup.md
project/cudaproject/output/: cpu_statistics.txt  readme.md  voxelsize0.25.txt  voxelsize0.5.txt  voxelsize0.75.txt  voxelsize1.25.txt  voxelsize1.txt
project/cudaproject/src/: hashvoxelizer.cu  las_reader.cpp  las_reader.h  main.cpp  ply_writer.cpp  ply_writer.h  point.h  voxelizer.cu  voxelizer.h
project/pycode/: setup.md
project/pycode/CODE/: hollow_cube_ball.py  hollow_square.py  plyVisualizer.py  pointCloudVisualizer.py  randomPointCloud.py
project/report/: .gitignore  bibliography.tex  figures.tex  implementation.tex  project_wannes_thibaut.tex  results.tex  tables.tex  template.tex  theory.tex  titlepage.tex
